--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
         <header>
             <div class="nav_bar">
                 <div class="nav_logo">
-                    <a href="#"
-                        ><img
-                            src="src/img/logo.png"
-                            alt="logo mais gostoso açai"
-                    /></a>
+                    <a href="#homea"
+                        >LOGO</a>
                 </div>
 
                 <ul class="nav_ul">
@@ -102,11 +99,12 @@
 
         <!-- Services -->
 
-        <section class="what-we-serve" id="service">
+        <section class="service" id="service">
             <div class="container1">
                 <div class="section-metadata">
-                    <h2 class="section-tagline">Serviços</h2>
-                    <h2 class="title section-title" id="teste">
+                    <h2 class="service-title">Serviços</h2>
+
+                    <h2 class="service-subtitle">
                         Lorem sectetur adipisicing
                         elit.
                     </h2>
@@ -174,8 +172,8 @@
         <!-- Menu -->
 
         <section class="menu" id="cardapio">
-            <h2 class="section-title1">Cardapio</h2>
-            <h3 class="section-subtitle">Açai especiais</h3>
+            <h2 class="menu-title">Cardapio</h2>
+            <h3 class="menu-subtitle">Açai especiais</h3>
             <div id="dishes">
                 <div class="dish">
                     <div class="dish-heart">
