--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </li>
 
                 </ul>
-                    <a href="#"><button class="btn-menu">Peça aqui</button></a>
+                    <a href="#"><button class="btn">Peça aqui</button></a>
                     <div class="btn_menu"><i class="fa-solid fa-bars"></i>
                     </div>
                 </div>
