--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
                     </li>
 
                 </ul>
-                    <a href="#"><button class="btn">Peça aqui</button></a>
+                    <a href="https://www.whatsapp.com"><button class="btn">Peça aqui</button></a>
                     <div class="btn_menu"><i class="fa-solid fa-bars"></i>
                     </div>
                 </div>
 
             <div class="drop_menu">
+                <ul>
                 <li class="nav_item  ">
                     <a href="#homea" class="nav_link active">Início</a>
                 </li> 
@@ -66,8 +67,10 @@
                 <li class="nav_item">
                     <a href="#review" class="nav_link">Avaliações</a>
                 </li>
-                <a href="#"><button class="btn-menu">Peça aqui</button></a>
-                    <div class="btn_menu"><i class="fa-solid fa-bars"></i></div>
+                <li><a href="https://www.whatsapp.com"><button class="btn-down">Peça aqui</button></a>
+                    </div></li>
+            </ul>
+            
             </div>
         </header>
 
