--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                 <ul class="nav_ul">
                     <li class="nav_item  ">
-                        <a href="#homea" class="nav_link active">Início</a>
+                        <a href="#home" class="nav_link active">Início</a>
                     </li> 
                     <li class="nav_item">
                         <a href="#service" class="nav_link">Serviços</a>
@@ -51,7 +51,7 @@
             <div class="drop_menu">
                 <ul>
                 <li class="nav_item  ">
-                    <a href="#homea" class="nav_link active">Início</a>
+                    <a href="#home" class="nav_link active">Início</a>
                 </li> 
                 <li class="nav_item">
                     <a href="#service" class="nav_link">Serviços</a>
@@ -77,27 +77,14 @@
         <!-- End NavBar -->
 
         <!-- Main -->
-        <section id="homea">
-        <main class="section_container main_container">
-            <div class="main_img"id="home">
-                <img  src="src/img/main2.png" alt="" /></div>
-                <div class="main_content">
-                    <h1>Lorem ipsum dolor sit amet.</h1>
-                    <p class="section_description">
-                    consectetur adipisicing elit. Non voluptate libero quasi
-                    odit, explicabo architecto saepe placeat est eligendi beatae
-                    voluptatum nostrum, error deserunt. Facere quos molestias
-                    atque officiis nobis
-                    </p>
-                    <div class="main_btn">
-                    <a href="https://www.whatsapp.com/" target="_blank"
-                        ><button class="btn">WhatsApp </button></a
-                    >
-                    </div>
-                </div>
+        <section class="home" id="home">
+            
+            <div class="home-title">
+                <h2>Lorem ipsum dolor</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim modi autem, dignissim</p>
             </div>
-        </main>
-    </section>
+            <div class="home-img"><img src="src/img/main2.png" alt=""></div>
+        </section>
         <!-- End Main -->
 
         <!-- Services -->
