--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             <div class="home-title">
                 <h2>Lorem ipsum dolor</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim modi autem, dignissim</p>
+                <p><a href="https://www.whatsapp.com"><button class="btn-menu"2>Peça aqui</button></a></p>
             </div>
             <div class="home-img"><img src="src/img/main2.png" alt=""></div>
         </section>
